# ME_492_PROJ_2

./: CMakeLists.txt
app1/: CMakeLists.txt  app1.cpp
app2/: CMakeLists.txt  app2.cpp
libs/: CMakeLists.txt
libs/OpenCV/: CMakeLists.txt  OpenCV.cpp  OpenCV.hpp
libs/libA/: CMakeLists.txt  MATH_A_LIB.cpp  MATH_A_LIB.hpp
libs/libB/: CMakeLists.txt  data_struc_libB.cpp  data_struc_libB.hpp
